pyarmor.error.log
179766 MainProcess 2023-12-17 17:03:10,032
Traceback (most recent call last):
  File "/opt/conda/envs/Mirror/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 718, in main
    main_entry(sys.argv[1:])
  File "/opt/conda/envs/Mirror/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 706, in main_entry
    return args.func(ctx, args)
           ^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/envs/Mirror/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 236, in cmd_gen
    builder.process(options)
  File "/opt/conda/envs/Mirror/lib/python3.11/site-packages/pyarmor/cli/generate.py", line 157, in process
    self._obfuscate_scripts()
  File "/opt/conda/envs/Mirror/lib/python3.11/site-packages/pyarmor/cli/generate.py", line 120, in _obfuscate_scripts
    code = Pytransform3.generate_obfuscated_script(self.ctx, r)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/envs/Mirror/lib/python3.11/site-packages/pyarmor/cli/core/__init__.py", line 103, in generate_obfuscated_script
    return m.generate_obfuscated_script(ctx, res)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 675, in generate_obfuscated_script
  File "/opt/conda/envs/Mirror/lib/python3.11/site-packages/pyarmor/cli/__init__.py", line 16, in process
    return meth(self, res, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 474, in process
  File "/opt/conda/envs/Mirror/lib/python3.11/site-packages/pyarmor/cli/resource.py", line 144, in reparse
    self.mtree = ast.parse(''.join(lines), self.frozenname, 'exec')
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/envs/Mirror/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen code.src.router>", line 180
    else:
    ^^^^
IndentationError: expected an indented block after 'if' statement on line 178
